--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
+  outline: 0px;
+}
+body, html {
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
 }
