--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -79,8 +79,7 @@
         display: flex;
         justify-content: space-between;
     }
-    &__repo {
-        
+    &__repo {   
         margin: 0 .5rem;
         display: inline;
         text-decoration: none;
@@ -96,5 +95,21 @@
     &__view-link {
         text-decoration: none;
         cursor: pointer;
+    }
+    &__view {
+        display: flex;
+        justify-content: center;
+    }
+    &__view-display {
+        display: inline-block;
+        text-decoration: none;
+        overflow-x: hidden;
+        padding: .25rem .5rem 0 .5rem;
+        // border: 1px solid black;
+        // border-radius: 4px;
+
+        &:hover {
+            background-color: aqua;
+        }
     }
 }
