--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -85,12 +85,12 @@
         text-decoration: none;
         overflow-x: hidden;
         padding: .25rem;
-        border: 1px solid black;
-        border-radius: 4px;
+        // border: 1px solid black;
+        // border-radius: 4px;
 
-        &:hover {
-            background-color: aqua;
-        }
+        // &:hover {
+        //     background-color: aqua;
+        // }
     }
     &__view-link {
         text-decoration: none;
@@ -112,4 +112,51 @@
             background-color: aqua;
         }
     }
+}
+
+$color: #0cf;
+$color: #87cefa;
+$color: #1e90ff;
+
+.button {
+  display: inline-block;
+  padding: .75rem 1.25rem;
+  border-radius: 10rem;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: .15rem;
+  transition: all .3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  &:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $color;
+    border-radius: 10rem;
+    z-index: -2;
+  }
+  &:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background-color: darken($color, 15%);
+    transition: all .3s;
+    border-radius: 10rem;
+    z-index: -1;
+  }
+  &:hover {
+    color: #fff;
+    &:before {
+      width: 100%;
+    }
+  }
 }
