--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -78,19 +78,14 @@
         width: 100%;
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
     }
     &__repo {   
-        margin: 0 .5rem;
+        margin: 0 .5rem .5rem .5rem;
         display: inline;
         text-decoration: none;
         overflow-x: hidden;
         padding: .25rem;
-        // border: 1px solid black;
-        // border-radius: 4px;
-
-        // &:hover {
-        //     background-color: aqua;
-        // }
     }
     &__view-link {
         text-decoration: none;
